Update tomcat-fix.md